added separate maven modules for e2e and app